Fixed the flickering issue

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -161,7 +161,10 @@
         @include responsive(md){
             &:before{
                 content:"";
-                inset:0;
+                top:0;
+                left:0;
+                bottom:0;
+                right:0;
                 position:fixed;
                 background-color:rgba(0,0,0,0.5);
             }
