--- a/src/scss/components/_cta-block.scss
+++ b/src/scss/components/_cta-block.scss
@@ -3,25 +3,31 @@
     position:relative;
     overflow:hidden;
     &:before{
-        content:"";
-        position:absolute;
-        left:-5%;
-        top:0;
-        bottom:0;
-        width:400px;
-        transform:scale(1.5);
-        background:linear-gradient(98deg, rgba(66, 49, 100, 0.20) -30%, rgba(201, 209, 249, 0.14) 18.9%, rgba(243, 209, 246, 0.09) 60.35%, rgba(223, 214, 241, 0.00) 129.15%);
-        filter: blur(82px);
+        @media(min-width:568px){
+            content:"";
+            position:absolute;
+            left:-5%;
+            top:0;
+            bottom:0;
+            pointer-events:none;
+            width:400px;
+            transform:scale(1.5);
+            background:linear-gradient(98deg, rgba(66, 49, 100, 0.20) -30%, rgba(201, 209, 249, 0.14) 18.9%, rgba(243, 209, 246, 0.09) 60.35%, rgba(223, 214, 241, 0.00) 129.15%);
+            filter: blur(82px);
+        }
     }
     &:after{
-        content:"";
-        position:absolute;
-        right:0;
-        top:0;
-        bottom:0;
-        width:400px;
-        background:linear-gradient(98deg, rgba(66, 49, 100, 0.20) -30%, rgba(201, 209, 249, 0.14) 18.9%, rgba(243, 209, 246, 0.09) 60.35%, rgba(223, 214, 241, 0.00) 129.15%);
-        filter: blur(82px);
+        @media(min-width:568px){
+            content:"";
+            position:absolute;
+            right:0;
+            top:0;
+            bottom:0;
+            pointer-events:none;
+            width:400px;
+            background:linear-gradient(98deg, rgba(66, 49, 100, 0.20) -30%, rgba(201, 209, 249, 0.14) 18.9%, rgba(243, 209, 246, 0.09) 60.35%, rgba(223, 214, 241, 0.00) 129.15%);
+            filter: blur(82px);
+        }
     }
     .inner{
         padding:60px 0px;
