--- a/src/scss/components/_review-slider.scss
+++ b/src/scss/components/_review-slider.scss
@@ -1,7 +1,11 @@
 
 .review-popup{
     position: fixed;
-    inset: 0;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    pointer-events: none;
     height: 100vh;
     z-index: 10;
     display: none;
