--- a/src/scss/components/_video-feature.scss
+++ b/src/scss/components/_video-feature.scss
@@ -201,7 +201,10 @@
                     }
                     .video-thumbnail{
                         position: absolute;
-                        inset: 0;
+                        top:0;
+                        left:0;
+                        bottom:0;
+                        right:0;
                         width: 100%;
                         height: auto;
                         cursor: pointer;
